sumo/tests/traci/ChangeTLValue/errors/UnknownTL/testclient_out.traci
TraCITestClient output file. Date: Mon Jul 01 13:27:46 2013


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <SetValue>:
  domID=194 varID=34 objID=xxx
.. Answered with error to command (194), [description: Traffic light 'xxx' is not known]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
